[workspace]
members = ["kady"]
resolver = "2"

[workspace.dependencies]
tokio  = "1.38.0"
clap   = "4.5.8"
serde  = "1.0.203"
chrono = "0.4.38"

twilight-model          = "0.15.4"
twilight-http           = "0.15.4"
twilight-standby        = "0.15.4"
twilight-gateway        = "0.15.4"
twilight-mention        = "0.15.3"
twilight-util           = "0.15.4"
twilight-gateway-queue  = "0.15.4"
twilight-cache-inmemory = "0.15.4"

tracing            = "0.1.40"
tracing-subscriber = "0.3.18"