[package]
name = "kady"
version = "0.1.0"
edition = "2021"

[dependencies]
clap     = { workspace = true, features = ["derive", "usage", "color", "error-context", "wrap_help", "suggestions"] }
tokio    = { workspace = true, features = ["full"] }
chrono   = { workspace = true}
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono", "time"] }